{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 39,
  "lineage": "f2c57f0d-56e4-4df9-452f-0cdb8743aa6e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e186e0c1411ba965",
            "association_id": "eipassoc-0791ad1393e9846d4",
            "domain": "vpc",
            "id": "eipalloc-0e186e0c1411ba965",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-015cd2106742aa0fc",
            "private_dns": "ip-10-2-0-187.ap-southeast-1.compute.internal",
            "private_ip": "10.2.0.187",
            "public_dns": "ec2-13-214-86-238.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.86.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "stage-EIP"
            },
            "tags_all": {
              "Name": "stage-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0753e0e42b20e96e3",
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:instance/i-0c44786a150528ef8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c44786a150528ef8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09af5b109c8cca56d",
            "private_dns": "ip-10-2-3-65.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.3.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f4eccb9a896f7d54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06809d6e91bb9d20c",
            "tags": {
              "Name": "stage-apache",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-apache",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-027802e26eb4daf92"
            ]
          },
          "dependencies": [
            "aws_security_group.apache",
            "aws_subnet.private",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0753e0e42b20e96e3",
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:instance/i-05344bbf5bffbf8ea",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05344bbf5bffbf8ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062d2b9e1e6348ef1",
            "private_dns": "ip-10-2-0-90.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.90",
            "public_dns": "ec2-13-250-115-229.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.115.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bffc6be86a0fdb16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a75d4e1cf38a0559",
            "tags": {
              "Name": "stage-bastion",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-bastion",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0066cd598d6eb936b"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_subnet.public",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:internet-gateway/igw-079701c2ed894f661",
            "id": "igw-079701c2ed894f661",
            "owner_id": "277598331909",
            "tags": {
              "Name": "stage-igw-demo"
            },
            "tags_all": {
              "Name": "stage-igw-demo"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e186e0c1411ba965",
            "connectivity_type": "public",
            "id": "nat-0af2291ca4e454f6b",
            "network_interface_id": "eni-015cd2106742aa0fc",
            "private_ip": "10.2.0.187",
            "public_ip": "13.214.86.238",
            "subnet_id": "subnet-0a75d4e1cf38a0559",
            "tags": {
              "Name": "NATGW"
            },
            "tags_all": {
              "Name": "NATGW"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:route-table/rtb-016f12e1e3a26e6dd",
            "id": "rtb-016f12e1e3a26e6dd",
            "owner_id": "277598331909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af2291ca4e454f6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stage-Pvt-RT"
            },
            "tags_all": {
              "Name": "Stage-Pvt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378837ec72758681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:route-table/rtb-00d7d79e30dd48433",
            "id": "rtb-00d7d79e30dd48433",
            "owner_id": "277598331909",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079701c2ed894f661",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Stage-Pub-RT"
            },
            "tags_all": {
              "Name": "Stage-Pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378837ec72758681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d5b09a15fe25326",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-0360351f00bdd75ae"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0566887fe571124e0",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-06fb3c744d80713cf"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba542ef0d87928b0",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-0f24c70035f4dc4d3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0234b922f5b133aa5",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-06809d6e91bb9d20c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0478f0efa380fe341",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-0cf36f65b7086d2d0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6cf815f625c9100",
            "route_table_id": "rtb-016f12e1e3a26e6dd",
            "subnet_id": "subnet-07cdcc6031382875a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327a18031bdcdf15",
            "route_table_id": "rtb-00d7d79e30dd48433",
            "subnet_id": "subnet-0a75d4e1cf38a0559"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0978f948a7bb5eb37",
            "route_table_id": "rtb-00d7d79e30dd48433",
            "subnet_id": "subnet-0546d2b89c29fca8a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da307cdbe2932afa",
            "route_table_id": "rtb-00d7d79e30dd48433",
            "subnet_id": "subnet-0b791e6c91f74b01e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:security-group/sg-01fabbd3816ef93f6",
            "description": "Allow Enduser inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fabbd3816ef93f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "End Users",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow End User",
            "name_prefix": "",
            "owner_id": "277598331909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-alb-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-alb-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378837ec72758681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:security-group/sg-027802e26eb4daf92",
            "description": "Allow bastion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027802e26eb4daf92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Alb-Apache",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01fabbd3816ef93f6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Bastion-Apache",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0066cd598d6eb936b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow bastion",
            "name_prefix": "",
            "owner_id": "277598331909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-apache-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-apache-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378837ec72758681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:security-group/sg-0066cd598d6eb936b",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0066cd598d6eb936b",
            "ingress": [
              {
                "cidr_blocks": [
                  "115.99.6.23/32"
                ],
                "description": "ssh admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow SSH",
            "name_prefix": "",
            "owner_id": "277598331909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-bastion-sg",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-bastion-sg",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378837ec72758681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0360351f00bdd75ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0360351f00bdd75ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-subnet-demo-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-data-subnet-demo-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-06fb3c744d80713cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fb3c744d80713cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-subnet-demo-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-data-subnet-demo-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0f24c70035f4dc4d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f24c70035f4dc4d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-data-subnet-demo-3",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-data-subnet-demo-3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-06809d6e91bb9d20c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06809d6e91bb9d20c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pvt-subnet-demo-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pvt-subnet-demo-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0cf36f65b7086d2d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf36f65b7086d2d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pvt-subnet-demo-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pvt-subnet-demo-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-07cdcc6031382875a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cdcc6031382875a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pvt-subnet-demo-3",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pvt-subnet-demo-3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0a75d4e1cf38a0559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a75d4e1cf38a0559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-subnet-demo-1",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pub-subnet-demo-1",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0546d2b89c29fca8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0546d2b89c29fca8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-subnet-demo-2",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pub-subnet-demo-2",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:subnet/subnet-0b791e6c91f74b01e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b791e6c91f74b01e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277598331909",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "stage-pub-subnet-demo-3",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-pub-subnet-demo-3",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0378837ec72758681"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:277598331909:vpc/vpc-0378837ec72758681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-002bceb30256d7a1a",
            "default_route_table_id": "rtb-0e96907d0110d2db7",
            "default_security_group_id": "sg-0cb39ba51529ede21",
            "dhcp_options_id": "dopt-0c29947992de687d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0378837ec72758681",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e96907d0110d2db7",
            "owner_id": "277598331909",
            "tags": {
              "Name": "stage-vpc-demo",
              "Terraform": "True"
            },
            "tags_all": {
              "Name": "stage-vpc-demo",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}